syntax = "proto3";
package process_definition;





/*
ListProcessDefinition请求
*/
message ListProcessDefinitionRequest {
    /*
    页码
    */
    int32 page = 1 ;
    /*
    每页数据量
    */
    int32 pageSize = 2 ;
    /*
    分类
    */
    string category = 3 ;
    /*
    是否查询主版本(默认false)
    */
    bool isMain = 4 ;
    /*
    模糊搜索，匹配name, creator字段
    */
    string Q = 5 ;
    /*
    流程名称，精准匹配
    */
    string name = 6 ;
    /*
    流程作者，精准匹配
    */
    string creator = 7 ;
}

/*
ListProcessDefinition返回
*/
message ListProcessDefinitionResponse {
message List {
    /*
    流程版本实例Id
    */
    string vInstanceId = 1 ;
    /*
    流程版本作者
    */
    string vCreator = 2 ;
    /*
    流程版本说明
    */
    string vMemo = 3 ;
    /*
    流程定义实例id
    */
    string instanceId = 4 ;
    /*
    流程定义名称
    */
    string name = 5 ;
    /*
    流程类别
    */
    string category = 6 ;
    /*
    流程作者
    */
    string creator = 7 ;
    /*
    流程说明
    */
    string memo = 8 ;
    /*
    创建时间
    */
    string ctime = 9 ;
    /*
    版本名称
    */
    string versionName = 10 ;
    /*
    流程部署Id
    */
    string deploymentId = 11 ;
    /*
    流程定义id
    */
    string flowableDefinitionId = 12 ;
    /*
    流程定义key
    */
    string flowableDefinitionKey = 13 ;
    /*
    是否为主版本(true 为主版本,false为非主版本)
    */
    bool isMain = 14 ;
    /*
    流程状态(unfinished 未完成, done已完成)
    */
    string state = 15 ;
    /*
    流程部署时间
    */
    string deploymentTime = 16 ;
    /*
    父部署Id
    */
    string parentDeploymentId = 17 ;
}
        
    
    /*
    页数
    */
    int32 page = 1 ;
    /*
    页大小
    */
    int32 page_size = 2 ;
    /*
    总数
    */
    int32 total = 3 ;
    /*
    数据列表
    */
    repeated List list = 4 ;
}

/*
ListProcessDefinitionApi返回
*/
message ListProcessDefinitionResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    process_definition.ListProcessDefinitionResponse data = 4 ;
}

