syntax = "proto3";
package flowable_service;

option go_package = "go.easyops.local/contracts/protorepo-models/easyops/model/flowable_service";





/*
流程定义
*/
message ProcessDefinition {
    /*
    流程定义实例id
    */
    string instanceId = 1 ;
    /*
    流程定义名称
    */
    string name = 2 ;
    /*
    流程类别
    */
    string category = 3 ;
    /*
    流程作者
    */
    string creator = 4 ;
    /*
    流程说明
    */
    string memo = 5 ;
    /*
    创建时间
    */
    string ctime = 6 ;
}

